--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,9 @@
     <link rel="icon"  />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta property='og:title' content='Quick Weather App'/>
+    <meta property="og:type" content="website" />
+    <meta property='og:image:url' content='https://upload.wikimedia.org/wikipedia/commons/f/f6/OpenWeather-Logo.jpg'/>
     <meta
       name="description"
       content="Web site created using create-react-app"
